--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -1,8 +1,6 @@
 ---
 driver:
   name: 'docker'
-  memory: '1024m'
-  cpu: 4
   use_sudo: false
 provisioner:
   name: 'chef_solo'
@@ -65,3 +63,17 @@ suites:
   - name: sysv
     run_list:
       - recipe[kafka]
+    attributes:
+      kafka:
+        init_style: 'sysv'
+  - name: runit
+    driver_config:
+      run_command: /sbin/init
+    run_list:
+      - recipe[runit]
+      - recipe[kafka]
+    excludes:
+      - ubuntu-14.04
+    attributes:
+      kafka:
+        init_style: 'runit'
